# nonebot-plugin-shutdown-hook

./: README.md  pyproject.toml
nonebot_plugin_shutdown_hook/: __init__.py
